remove anchors from project div and make clickable divs instead with styles and fix flex wrap and add chottourl project along with categories in projects

--- a/styles.css
+++ b/styles.css
@@ -48,34 +48,6 @@ nav ul {
     margin: 0;
 }
 
-@media screen and (max-width: 576px) {
-    nav {
-        display: flex;
-        flex-direction: column;
-    }
-
-    nav img {
-        display: block;
-        align-self: flex-end;
-        height: 24px;
-        margin: 5px;
-    }
-
-    nav ul {
-        display: none;
-    }
-
-    nav ul.show-menu {
-        display: block;
-        padding: 10px;
-        padding-left: 0;
-        background-color: var(--accent);
-        position: absolute;
-        top: 34;
-        right: 0;
-        left: 0;
-    }
-}
 
 nav {
     position: sticky;
@@ -135,23 +107,20 @@ section {
     width: 90%;
     font-size: 125%;
 }
-
-@media screen and (max-width: 576px) {
-    .projects {
-        display: flex;
-        flex-flow: column wrap;
-    }
+#projects{
+    width: 100%;
 }
-
 .projects {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
+    justify-content: space-between;
 }
 
-.projects a {
+/* .projects a {
     text-decoration: none;
     color: var(--text);
-}
+} */
 
 .project {
     display: grid;
@@ -161,18 +130,14 @@ section {
     border: 1px solid var(--secondary);
     border-radius: 20px;
     padding: 5px;
+    cursor: pointer;
+    flex-basis: calc(50% - 20px);
 }
 
 .project p {
     padding: 10px;
 }
 
-@media screen and (max-width: 576px) {
-    .project p {
-        /* padding: 5px; */
-        font-size: 80%;
-    }
-}
 
 .project img {
     grid-row: 1/3;
@@ -195,11 +160,51 @@ td,
 th {
     text-align: center;
     border: 1px solid var(--primary);
+    padding: 4px 8px 4px 8px;
 
-}
+}   
 
 table {
     border-collapse: collapse;
-    width: 80%;
+    width: 100%;
     margin: auto;
+}
+
+@media screen and (max-width: 576px) {
+    nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    nav img {
+        display: block;
+        align-self: flex-end;
+        height: 24px;
+        margin: 5px;
+    }
+
+    nav ul {
+        display: none;
+    }
+
+    nav ul.show-menu {
+        display: block;
+        padding: 10px;
+        padding-left: 0;
+        background-color: var(--accent);
+        position: absolute;
+        top: 34;
+        right: 0;
+        left: 0;
+    }
+
+    .project p {
+        /* padding: 5px; */
+        font-size: 80%;
+    }
+
+    .projects {
+        display: flex;
+        flex-flow: column wrap;
+    }
 }
